@@ -1,5 +1,7 @@
 Changes in 1.6.1
 
+ - Bugfix: Prevent a crash when getTypeName was called for the guienvironment. EGUIET_ELEMENT got changed for this.
+
  - Bugfix: Horizontal centered font with linebreaks draw now all lines. For example multiline TextSceneNodes work again.
 
  - Bugfix: spinbox can no longer get in an endless loop due to floating point rounding error (found by slavik262)
